# r-chr

./: .gitignore  Cargo.toml  LICENSE  README.md  README_ja.md
.github/workflows/: build.yml
ai_docs/: architecture.md  data-struture.md  directory-struture.md  drawing-tools.md  implementation-tasks.md  requirement.md  tech-stack.md
macos/: Info.plist
src/: app.rs  chr.rs  main.rs  native_menu.rs  nes.rs  palette.rs  png_import.rs
src/editor/: app.rs  bank_view.rs  clipboard.rs  dot_editor.rs  file_ops.rs  i18n.rs  info_panel.rs  keyboard.rs  mod.rs  png_import.rs  setup.rs  theme.rs
src/editor/mac/: menu_bar.rs  menu_events.rs  mod.rs
src/io/: chr.rs  mod.rs  png.rs
