[package]
name = "R-CHR"
version = "0.1.0"
edition = "2024"


[dependencies]
eframe = "0.31"
egui = "0.31"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
png = "0.17"

[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.15"
objc2-app-kit    = { version = "0.2", default-features = false, features = ["NSAppearance", "NSApplication"] }
objc2-foundation = { version = "0.2", default-features = false, features = ["NSThread"] }
